# bill2csv

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/bill2csv/: __main__.py  bill2csv.py  constants.py  loaders.py  utils.py
src/bill2csv/scripts/: merge_month_script.py
